--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.4.0",
-	"appid": "wx4c4b9403eaec3bde",
+	"appid": "wx14009a7e97e049c7",
 	"projectname": "double-color-ball",
 	"debugOptions": {
 		"hidedInDevtools": []
